# auth-rs

./: Cargo.toml  README.md  config.example.json  fallback_users.example.json  times.txt
config/: Cargo.toml
config/src/: lib.rs
sqlite_centralized_actions/: Cargo.toml  README.md
sqlite_centralized_actions/src/: setup.rs  signups.rs  utils.rs
sqlite_centralized_setup/: Cargo.toml
sqlite_centralized_setup/src/: main.rs
sqlite_connection_pool/: Cargo.toml
sqlite_connection_pool/src/: lib.rs
sqlite_interface/: Cargo.toml  README.md
sqlite_interface/src/: actions.rs  connector.rs  contact_kinds.rs  contacts.rs  emails.rs  invitation_actions.rs  invitations.rs  ip_address_action_kinds.rs  ip_address_rate_limits.rs  lib.rs  people.rs  people_action_kinds.rs  people_action_rate_limits.rs  public_sessions.rs  roles.rs  roles_to_people.rs  sessions.rs  signups.rs  totp.rs
sqlite_interface/tests/: contact_kinds.rs  contacts.rs  ip_address_action_kinds.rs  ip_address_rate_limits.rs  ip_rate_limits.rs  people.rs  people_action_kinds.rs  people_action_rate_limits.rs  public_sessions.rs  roles.rs  roles_to_people.rs  session.rs  signups.rs  totp.rs
sqlite_maintenance/: Cargo.toml  README.md
sqlite_maintenance/src/: main.rs
sqlite_monolith_actions/: Cargo.toml  README.md
sqlite_monolith_actions/src/: invitation_actions.rs  lib.rs  signup_actions.rs  utils.rs
sqlite_monolith_server/: Cargo.toml  README.md
sqlite_monolith_server/src/: main.rs  service.rs
sqlite_monolith_setup/: Cargo.toml
sqlite_monolith_setup/src/: main.rs
tmp/: contacts.rs  ip_rate_limits.rs  login_rate_limits.rs  roles.rs  session_rate_limits.rs  sessions.rs  time_based_one_time_passwords.rs
type_flyweight/: Cargo.toml
type_flyweight/src/: contacts.rs  invitations.rs  ip_address_rate_limits.rs  ip_rate_limits.rs  lib.rs  people.rs  people_action_rate_limits.rs  roles.rs  sessions.rs  signups.rs  totp.rs
