[workspace]
resolver = "2"
members = ["type_flyweight", "sqlite_centralized_actions", "sqlite_interface", "sqlite_centralized_setup" ]

[workspace.dependencies]
bytes = "1"
argon2 = { version = "0.5", features = ["std"] }
base64 = { version = "0.22" }
rand = "0.9.0"
rusqlite = { version = "0.32" }
snowprints = { git = "https://github.com/taylor-vann/snowprints", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"