[package]
name = "sqlite_monolith_setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite_interface = { path = "../sqlite_interface" }
rusqlite = { workspace = true }
type_flyweight = { path = "../type_flyweight" }